--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-refresh": "^0.8.3",
     "react-router-dom": "^5.2.0",
     "react-router-redux": "^4.0.8",
+    "react-script": "^2.0.5",
     "redux": "^4.0.5",
     "resolve": "1.18.1",
     "resolve-url-loader": "^3.1.2",
