火狐能用html5自带的定位

--- a/package.json
+++ b/package.json
@@ -79,8 +79,7 @@
     "workbox-webpack-plugin": "5.1.4"
   },
   "scripts": {
-    "start-http": "set PORT=8888&&node scripts/start.js",
-    "start": "set HTTPS=true&&set SSL_CRT_FILE=certificate.pem&&set SSL_KEY_FILE=privatekey.pem&&set PORT=8888&&node scripts/start.js",
+    "start": "set HTTPS=true&&set PORT=8888&&node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
   },
